testdata/baselines/reference/submodule/conformance/jsDeclarationsReexportedCjsAlias.errors.txt
lib.js(14,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
main.js(1,51): error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'esModuleInterop' flag and referencing its default export.
main.js(3,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== main.js (2 errors) ====
    const { SomeClass, SomeClass: Another } = require('./lib');
                                                      ~~~~~~~
!!! error TS2497: This module can only be referenced with ECMAScript imports/exports by turning on the 'esModuleInterop' flag and referencing its default export.
    
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        SomeClass,
        Another
    }
==== lib.js (1 errors) ====
    /**
     * @param {string} a
     */
    function bar(a) {
        return a + a;
    }
    
    class SomeClass {
        a() {
            return 1;
        }
    }
    
    module.exports = {
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
        bar,
        SomeClass
    }